fix(core): css prop apis
- fixed missing host `--font-size` property in grid cell
- added `--border` property to card styles.
- fixed input group background color
- fixed progress ring styles to minimize overlap of warning svg

 closes #139

--- a/projects/elements/src/grid/cell/cell.css
+++ b/projects/elements/src/grid/cell/cell.css
@@ -4,6 +4,7 @@
   --min-height: var(--row-height);
   --min-width: var(--nve-ref-size-1000);
   --font-weight: var(--nve-ref-font-weight-medium);
+  --font-size: var(--nve-ref-font-size-100);
   --height: 100%;
   --border-left: 0;
   --border-right: 0;
